@@ -1,71 +1,60 @@
-/**
+/*
  * TLS-Attacker - A Modular Penetration Testing Framework for TLS
  *
- * Copyright 2014-2022 Ruhr University Bochum, Paderborn University, Hackmanit GmbH
+ * Copyright 2014-2023 Ruhr University Bochum, Paderborn University, Technology Innovation Institute, and Hackmanit GmbH
  *
  * Licensed under Apache License, Version 2.0
  * http://www.apache.org/licenses/LICENSE-2.0.txt
  */
-
 package de.rub.nds.tlsattacker.core.protocol.parser;
 
 import de.rub.nds.modifiablevariable.util.ArrayConverter;
-import de.rub.nds.tlsattacker.core.config.Config;
 import de.rub.nds.tlsattacker.core.constants.HandshakeMessageType;
 import de.rub.nds.tlsattacker.core.constants.ProtocolVersion;
 import de.rub.nds.tlsattacker.core.protocol.message.SupplementalDataMessage;
-import java.util.Arrays;
-import java.util.Collection;
-import static org.junit.Assert.assertArrayEquals;
-import static org.junit.Assert.assertTrue;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import java.util.List;
+import java.util.stream.Stream;
+import org.junit.jupiter.api.Named;
+import org.junit.jupiter.params.provider.Arguments;
 
-@RunWith(Parameterized.class)
-public class SupplementalDataParserTest {
+public class SupplementalDataParserTest
+        extends AbstractHandshakeMessageParserTest<
+                SupplementalDataMessage, SupplementalDataParser> {
 
-    @Parameterized.Parameters
-    public static Collection<Object[]> generateData() {
-        return Arrays.asList(new Object[][] {
-            { ArrayConverter.hexStringToByteArray("1700001100000e4002000a0008010005aaaaaaaaaa"),
-                HandshakeMessageType.SUPPLEMENTAL_DATA, 17, 14,
-                ArrayConverter.hexStringToByteArray("4002000a0008010005aaaaaaaaaa"), ProtocolVersion.TLS11 },
-            { ArrayConverter
-                .hexStringToByteArray("1700001F00001c4002000a0008010005aaaaaaaaaa4002000a0008010005aaaaaaaaaa"),
-                HandshakeMessageType.SUPPLEMENTAL_DATA, 31, 28,
-                ArrayConverter.hexStringToByteArray("4002000a0008010005aaaaaaaaaa4002000a0008010005aaaaaaaaaa"),
-                ProtocolVersion.TLS11 } });
+    public SupplementalDataParserTest() {
+        super(
+                SupplementalDataMessage.class,
+                SupplementalDataParser::new,
+                List.of(
+                        Named.of(
+                                "SupplementalDataMessage::getSupplementalDataLength",
+                                SupplementalDataMessage::getSupplementalDataLength),
+                        Named.of(
+                                "SupplementalDataMessage::getSupplementalDataBytes",
+                                SupplementalDataMessage::getSupplementalDataBytes)));
     }
 
-    private byte[] message;
-    private HandshakeMessageType type;
-    private int length;
-
-    private int supplementalDataLength;
-    private byte[] supplementalDataBytes;
-    private ProtocolVersion version;
-    private final Config config = Config.createConfig();
-
-    public SupplementalDataParserTest(byte[] message, HandshakeMessageType type, int length, int supplementalDataLength,
-        byte[] supplementalDataBytes, ProtocolVersion version) {
-        this.message = message;
-        this.type = type;
-        this.length = length;
-        this.supplementalDataLength = supplementalDataLength;
-        this.supplementalDataBytes = supplementalDataBytes;
-        this.version = version;
+    public static Stream<Arguments> provideTestVectors() {
+        return Stream.of(
+                Arguments.of(
+                        ProtocolVersion.TLS11,
+                        ArrayConverter.hexStringToByteArray(
+                                "1700001100000e4002000a0008010005aaaaaaaaaa"),
+                        List.of(
+                                HandshakeMessageType.SUPPLEMENTAL_DATA.getValue(),
+                                17,
+                                14,
+                                ArrayConverter.hexStringToByteArray(
+                                        "4002000a0008010005aaaaaaaaaa"))),
+                Arguments.of(
+                        ProtocolVersion.TLS11,
+                        ArrayConverter.hexStringToByteArray(
+                                "1700001F00001c4002000a0008010005aaaaaaaaaa4002000a0008010005aaaaaaaaaa"),
+                        List.of(
+                                HandshakeMessageType.SUPPLEMENTAL_DATA.getValue(),
+                                31,
+                                28,
+                                ArrayConverter.hexStringToByteArray(
+                                        "4002000a0008010005aaaaaaaaaa4002000a0008010005aaaaaaaaaa"))));
     }
-
-    @Test
-    public void testParse() {
-        SupplementalDataParser parser = new SupplementalDataParser(0, message, version, config);
-        SupplementalDataMessage suppDataMessage = parser.parse();
-        assertArrayEquals(suppDataMessage.getCompleteResultingMessage().getValue(), message);
-        assertTrue(suppDataMessage.getType().getValue() == type.getValue());
-        assertTrue(suppDataMessage.getLength().getValue() == length);
-        assertTrue(suppDataMessage.getSupplementalDataLength().getValue() == supplementalDataLength);
-        assertArrayEquals(suppDataMessage.getSupplementalDataBytes().getValue(), supplementalDataBytes);
-    }
-
 }
